<resources>
    <string name="app_name">Baby Meter</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="login_account">Login to Baby Meter</string>
    <string name="register_account">Register to Baby Meter</string>
    <string name="username">"Username"</string>
    <string name="password">Password"</string>
    <string name="login_havent_account">
         <font color="#A7A5AF"><b>Don’t have an account?</b></font>
        <font color="#FF7A8F"><b>Register</b></font>
    </string>
    <string name="or_login_google">
    <font color="#A7A5AF"><b>Or Login With</b></font>
    </string>
    <string name="or_register_google">
        <font color="#A7A5AF"><b>Or Register With</b></font>
    </string>
    <string name="login_google">CONTINUE WITH GOOGLE</string>
    <string name="forget_password">
         <font color="#A7A5AF"><b>Forget Password?</b></font>
    </string>
    <string name="create_an_account">Create an account</string>
    <string name="nik">"NIK"</string>
    <string name="email">"Email"</string>
    <string name="have_an_account">
         <font color="#A7A5AF"><b>Already have an account?</b></font>
        <font color="#FF7A8F"><b>Login</b></font>
    </string>

    <string name="title1">Welcome to BabyMeter</string>
    <string name="title2">Easy to Measure baby </string>
    <string name="title3">Track Baby Growth</string>
    <string name="title4">Get Insight for Baby</string>

    <string name="desc1">Your journey to track your baby growth and milestones starts here! Lets explore how BabyMeter can help you.</string>
    <string name="desc2">Measuring a baby growth only with a camera can get accurate results. it is very easy to use everyday.</string>
    <string name="desc3">Monitor your baby growth with ease. BabyMeter allows you to record and visualize weight, height, and head circumference over time.</string>
    <string name="desc4">With BabyMeter you can provide baby nutrition categories that provide insight into being more aware of your baby health.</string>
    <string name="InputBabyData">Input Baby Data</string>
    <string name="namabayi">Name</string>
    <string name="nikibu">NIK</string>
    <string name="umurbayi">Age</string>
    <string name="beratbayi">Weight</string>
    <string name="buttonnext">NEXT</string>
    <string name="uploadcamera">Upload Picture From Camera</string>
    <string name="uploadgallery">Upload Picture From Gallery</string>
    <string name="tv_name">NAME :</string>
    <string name="tv_nik">NIK :</string>
    <string name="tv_weight">WEIGHT :</string>
    <string name="buttonscan">SCAN BABY</string>
    <string name="tv_age">AGE :</string>
    <string name="manfaat">Manfaat</string>
    <string name="manfaatapp">Aplikasi \'Baby Meter\' melakukan pengukuran otomatis tinggi, berat, lingkar kepala, dan BMI bayi via scan kamera/foto serta memberi evaluasi kesehatan dan laporan medis aman.</string>
    <string name="start_multiline">Start n/
    Scanning the baby</string>
    <string name="start">Start\nscanning the baby\n</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameapp">Username</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="lingkar_kepala">Lingkar Kepala</string>
    <string name="lingkar_kaki">Lingkar Kaki</string>
    <string name="lingkar_badan">Lingkar Badan</string>
    <string name="tinggi_badan">Tinggi Badan</string>
    <string name="category">Category</string>
    <string name="details">Details</string>
    <string name="change">CHANGE</string>
    <string name="chest_size">Chest Size</string>
    <string name="head_circumference">Head Circumference</string>
    <string name="arm_circumference">Arm Circumference</string>
    <string name="thigh_circumference">Thigh Circumference</string>
    <string name="abdominal_circumference">Abdominal Circumference</string>
    <string name="height">Height</string>
    <string name="categori">Categori</string>
    <string name="save">SAVE</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="delete">DELETE</string>
    <string name="toh_istory">GO TO HISTORY</string>

</resources>