<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/resultfragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/predictionResultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="162dp"
        android:layout_height="220dp"
        android:paddingTop="2dp"
        android:layout_gravity="center"
        android:src="@drawable/baby"
        android:paddingLeft="0dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:background="@color/birumuda"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/NIK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nik"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/namabayi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/namabayi"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/NIK"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/umurbayi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/umurbayi"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/namabayi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/beratbayi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/beratbayi"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/umurbayi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lingkardada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/chest_size"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/beratbayi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lingkarkepala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/head_circumference"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/lingkardada"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lingkarlengan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/arm_circumference"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/lingkarkepala"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lingkarpaha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/thigh_circumference"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/lingkarlengan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/lingkarperut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/abdominal_circumference"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/lingkarpaha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/tinggibadan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/height"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/lingkarperut"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/categori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/categori"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/tinggibadan"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/deskripsi"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintTop_toBottomOf="@id/categori"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/buttonsave"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="100dp"
        android:text="@string/toh_istory"
        android:background="@drawable/bg_button"
        />

</LinearLayout>
