<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/pinkmuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".Details">

        <TextView
            android:id="@+id/Detail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:paddingLeft="10dp"
            android:text="@string/details"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="162dp"
                android:layout_height="250dp"
                android:paddingTop="2dp"
                android:layout_gravity="center"
                android:src="@drawable/history"
                android:paddingLeft="0dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/namabayi"
                    android:textSize="20sp"
                    android:paddingLeft="4dp"
                    android:textStyle="bold"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/NIK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nik"
                    android:textSize="18sp"
                    android:paddingLeft="4dp"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/Beratbayi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/beratbayi"
                    android:paddingLeft="4dp"
                    android:textSize="14sp"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:background="@color/birumuda"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/lingkarkepala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lingkar_kepala"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/lingkarkaki"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lingkar_kaki"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/lingkarkepala"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/lingkarbadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lingkar_badan"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/lingkarkaki"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/tinggibadan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/tinggi_badan"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/lingkarbadan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/birumuda"
            android:padding="8dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="BMI"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/categori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="16sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/bmi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
</ScrollView>
