<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/inputdatafragment"
    tools:context=".ui.predictions.InputDataFragment">

    <!-- Title -->
    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/InputBabyData"
        android:fontFamily="@font/ibmplexsans_medium"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Name Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/namabayi"
        android:fontFamily="@font/ibmplexsans_medium"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nikInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/nikibu"
        android:fontFamily="@font/ibmplexsans_medium"
        app:layout_constraintTop_toBottomOf="@id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nikEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ageInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/umurbayi"
        android:fontFamily="@font/ibmplexsans_medium"
        app:layout_constraintTop_toBottomOf="@id/nikInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Age Input Layout -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/beratbayi"
        android:fontFamily="@font/ibmplexsans_medium"
        app:layout_constraintTop_toBottomOf="@id/ageInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray" />
    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/image_add"
        android:layout_width="230dp"
        android:layout_height="200dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/baseline_linked_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weightInputLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_camera"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:drawableBottom="@drawable/baseline_camera"
        android:paddingBottom="8dp"
        android:background="@drawable/dashed_border"
        android:fontFamily="@font/ibmplexsans_medium"
        android:text="@string/uploadcamera"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_add"
        app:layout_constraintTop_toTopOf="@+id/image_add" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gallery_button"
        android:layout_width="130dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/dashed_border"
        android:drawableBottom="@drawable/baseline_gallery"
        android:text="@string/uploadgallery"
        android:fontFamily="@font/ibmplexsans_medium"
        android:paddingBottom="8dp"
        android:textAllCaps="false"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload_button"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/pink"
        android:text="@string/buttonscan"
        android:fontFamily="@font/ibmplexsans_medium"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_button"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
