<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfilFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="416dp"
        android:layout_height="254dp"
        android:adjustViewBounds="true"
        android:foregroundGravity="center"
        android:scaleType="fitXY"
        android:src="@color/pinkmuda"
        tools:layout_editor_absoluteX="2dp" />

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/profil"
        android:foregroundGravity="center"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnChangePhoto"
        android:layout_width="119dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/change"
        app:layout_constraintStart_toStartOf="@id/ivProfilePicture"
        app:layout_constraintTop_toBottomOf="@id/ivProfilePicture" />

    <TextView
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="Charlie Chan"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/btnChangePhoto"
        app:layout_constraintTop_toBottomOf="@id/btnChangePhoto" />

    <LinearLayout
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_add"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/profil"/>
        <TextView
            android:id="@+id/Fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ibmplexsans_semibold"
            android:text="@string/usernameapp"
            android:textSize="14sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_add"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/Username">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/baseline_lock"/>
        <TextView
            android:id="@+id/Passwordd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ibmplexsans_semibold"
            android:text="@string/password"
            android:textSize="14sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/Logout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:alpha="1"
        android:background="@drawable/bg_button"
        android:backgroundTint="@color/pink"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password" />

</androidx.constraintlayout.widget.ConstraintLayout>
